# rules_py

./: MODULE.bazel  README.md
docs/: interpreter.md  uv-patching.md  uv.md
e2e/: .bazelrc  BUILD.bazel  MODULE.bazel
e2e/cases/azure-core-tracing-overlap/: test.py
e2e/cases/interpreter-bytecode-magic/: BUILD.bazel  MODULE.bazel  test.sh
e2e/cases/interpreter-local-pyvenv-home/: BUILD.bazel  setup.MODULE.bazel  test_pyvenv_home.py
e2e/cases/interpreter-toolchain-settings/: BUILD.bazel  MODULE.bazel  test.sh  toolchain_test.bzl
e2e/cases/interpreter-version-541/: BUILD.bazel
e2e/cases/oci/py_image_layer/snapshots/: my_app_layers_fp_listing.yaml  my_app_layers_listing.yaml  my_app_layers_multi_listing.yaml
e2e/cases/oci/py_venv_image_layer/snapshots/: my_app_amd64_layers_listing.yaml  my_app_arm64_layers_listing.yaml
e2e/cases/pbs-cc-toolchain/: BUILD.bazel  setup.MODULE.bazel  test.sh  toolchain_test.bzl
e2e/cases/pbs-symlink-prefix-1048/: BUILD.bazel  action_probe.bzl  test.sh  test_pbs_prefix.py
e2e/cases/pep517-frontend-exec-group/: test.sh
e2e/cases/pth-install-tree-fallback/: BUILD.bazel  __test__.py
e2e/cases/pth-namespace-547/: BUILD.bazel  __test__.py
e2e/cases/uv-console-script-extras/: metadata_test.bzl
e2e/cases/uv-deps-650/airflow/: __test__.py
e2e/cases/uv-deps-650/crossbuild/snapshots/: app_amd64_layers_listing.yaml  app_arm64_layers_listing.yaml
e2e/cases/uv-patching-829/: __test__.py  setup.MODULE.bazel
e2e/cases/uv-patching-829/patches/: post_install.patch
e2e/cases/uv-requirements-bzl/: BUILD.bazel  setup.MODULE.bazel
e2e/cases/uv-sdist-fallback/: BUILD.bazel  setup.MODULE.bazel
e2e/cases/uv-sdist-native-build/: require_cxx_driver.patch
e2e/cases/venv-bin-scripts-423/: __test__.py
e2e/cases/whl-install-pyc-runtime/: BUILD.bazel  MODULE.bazel  test.sh
e2e/snapshots/: abi3_compat.whl_install.cffi.BUILD.bazel  abi3_compat.whl_install.cryptography.BUILD.bazel  firebase_admin.test_tool.venv.pth  pbs_symlink_prefix_1048.python311.pyvenv.cfg  pypi_multi.defs.bzl  pypi_single.defs.bzl  pypi_single.requirements.bzl  sdist_build.console_script_only.BUILD.bazel  sdist_build.uv_sdist_jdk_build.jpype1.BUILD.bazel  sdist_build.uv_sdist_native_build.python_geohash.BUILD.bazel  whl_install.azure_overlap.azure_core.BUILD.bazel  whl_install.azure_overlap.azure_core_tracing_opentelemetry.BUILD.bazel  whl_install.bare_linux_wheels.grpcio.BUILD.bazel
py/: BUILD.bazel  defs.bzl
py/private/: providers.bzl  py_image_layer.bzl  py_library.bzl  py_unpacked_wheel.bzl  py_unpacked_wheel_test.bzl
py/private/interpreter/: BUILD.bazel  extension.bzl  py_cc_toolchain.bzl  py_cc_toolchain_test.bzl  repository.bzl  version_util.bzl  version_util_test.bzl  versions.bzl
py/private/py_venv/: BUILD.bazel  entries.py  launcher_bootstrap.py  launcher_bootstrap_test.py  merge_outputs_test.bzl  ordinary_runtime_test.py  py_venv.bzl  py_venv_exec.bzl  runfiles_imports.py  runfiles_imports_test.py  test_entries.py  unknown_topology_precedence_test.py  venv.bzl  virtuals_resolvers.bzl  wheel_writer.py
py/private/py_venv/templates/: wheel_imports.py
py/private/py_venv/tests/: virtuals_resolvers_test.bzl
py/tests/cc-deps/: BUILD.bazel  test_smoke.py
py/tests/py-internal-venv/: BUILD.bazel  venv_entries_test.bzl
py/tests/py_venv_conflict/: collision_order_test.bzl  test_collision_order.py  test_collision_type_reset.py  test_cross_shape_collision.py  test_incomplete_layout_pth.py  test_metadata_collision_suppression.py  test_namespace_fallback.py  test_native_collision.py  test_nested_cross_shape_collision.py  test_pth_directory_overlay.py
py/tests/virtual/django/: BUILD.bazel
py/tests/wheel-root-pth-double/: BUILD.bazel  compact_manifest_only_test.sh  compact_runtime_test.py  double_pth_test.py  metadata_test.bzl  physical_typing_test.py
py/tests/wheel-root-pth-double/a/: a_marker.pth
py/tests/wheel-root-pth-double/a/apkg/: data.txt
py/tests/wheel-root-pth-double/b/bpkg-stubs/: __init__.pyi
py/tools/site_merge/: site_merge.py  site_merge_test.py
py/tools/unpack/: unpack.py  unpack_test.py
uv/private/extension/: defs.bzl
uv/private/pep517_whl/: BUILD.bazel  build_helper.py  memory_monitor.py  memory_monitor_test.py  providers.bzl  rule.bzl  test.bzl
uv/private/pep517_whl/tests/python_env_backend/: backend.py
uv/private/sdist_build/: BUILD.bazel  attrs.bzl  repository.bzl
uv/private/uv_hub/: BUILD.bazel  repository.bzl
uv/private/uv_hub/snapshots/: pypi.defs.bzl  pypi.requirements.bzl  python_interpreters.BUILD.bazel  whl_install.attrs.BUILD.bazel
uv/private/whl_install/: repository.bzl  rule.bzl  test.bzl
