interpreters = use_extension("@aspect_rules_py//py:extensions.bzl", "python_interpreters")
interpreters.toolchain(python_version = "3.8")
interpreters.toolchain(
    pre_release = True,
    python_version = "3.15",
)
use_repo(
    interpreters,
    "python_3_13_x86_64_pc_windows_msvc",
    "python_3_13_x86_64_unknown_linux_gnu",
    "python_3_13_x86_64_unknown_linux_gnu_freethreaded",
    "python_3_15_x86_64_pc_windows_msvc_freethreaded",
    "python_3_15_x86_64_unknown_linux_gnu_freethreaded",
    "python_3_8_aarch64_apple_darwin",
    "python_3_8_x86_64_apple_darwin",
)
