load("@aspect_rules_py//py:defs.bzl", "py_test", "py_unpacked_wheel")
load("//tools:pth_snapshot.bzl", "extract_venv_pth")

# Test namespace package resolution with the symlink-forest venv.
py_test(
    name = "test",
    srcs = ["__test__.py"],
    dep_group = "pth-namespace-547",
    env = {"EXPECT_PHYSICAL_VENV": "1"},
    expose_venv = True,
    isolated = False,
    main = "__test__.py",
    package_collisions = "warning",
    python_version = "3.11",
    deps = [
        "@pypi_pth_namespace_547//jaraco_classes",
        "@pypi_pth_namespace_547//jaraco_functools",
    ],
)

# Hand-written wheel metadata must participate in the same complete directory
# merge as uv-generated metadata.
py_unpacked_wheel(
    name = "jaraco_functools_manual_metadata",
    src = "@pypi_pth_namespace_547//jaraco_functools:whl",
    directory_top_levels = [
        "jaraco",
        "jaraco_functools-4.4.0.dist-info",
    ],
    top_levels = [
        "jaraco",
        "jaraco_functools-4.4.0.dist-info",
    ],
)

py_test(
    name = "test_partial_merge",
    srcs = ["partial_merge_test.py"],
    dep_group = "pth-namespace-547",
    expose_venv = True,
    isolated = False,
    main = "partial_merge_test.py",
    package_collisions = "warning",
    python_version = "3.11",
    deps = [
        ":jaraco_functools_manual_metadata",
        "@pypi_pth_namespace_547//jaraco_classes",
    ],
)

# Test namespace packages with the ordinary wheel-import-root layout.
py_test(
    name = "test_ordinary",
    srcs = ["__test__.py"],
    dep_group = "pth-namespace-547",
    main = "__test__.py",
    deps = [
        "@pypi_pth_namespace_547//jaraco_classes",
        "@pypi_pth_namespace_547//jaraco_functools",
    ],
)

# Snapshot fixture for the exposed physical layout: jaraco-classes and
# jaraco-functools are both fully represented by concrete PEP 420 namespace
# entries, so neither wheel root appears in its .pth fallback.
extract_venv_pth(
    name = "test.venv.pth",
    venv = ":test.venv",
)
