load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//py:defs.bzl", "py_library", "py_test")

config_setting(
    name = "linux_gnu",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    flag_values = {
        "//uv/private/constraints/platform:platform_libc": "glibc",
    },
)

cc_binary(
    name = "example_library.so",
    testonly = True,
    srcs = ["example_library.cpp"],
    linkshared = True,
    target_compatible_with = select({
        ":linux_gnu": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@rules_python//python/cc:current_py_cc_headers",
        "@rules_python//python/cc:current_py_cc_libs",
    ],
)

py_library(
    name = "example_library",
    testonly = True,
    data = [":example_library.so"],
    imports = ["."],
    target_compatible_with = select({
        ":linux_gnu": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

py_test(
    name = "test_smoke",
    srcs = ["test_smoke.py"],
    python_version = "3.13",
    target_compatible_with = select({
        ":linux_gnu": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [":example_library"],
)
