load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//py:defs.bzl", "py_library", "py_test")

_WINDOWS_INCOMPATIBLE = select({
    "@platforms//os:windows": ["@platforms//:incompatible"],
    "//conditions:default": [],
})

cc_binary(
    name = "example_library.so",
    testonly = True,
    srcs = ["example_library.cpp"],
    linkshared = True,
    target_compatible_with = _WINDOWS_INCOMPATIBLE,
    deps = [
        "@rules_python//python/cc:current_py_cc_headers",
        "@rules_python//python/cc:current_py_cc_libs",
    ],
)

cc_binary(
    name = "limited_api_library.so",
    testonly = True,
    srcs = ["limited_api_library.cpp"],
    linkshared = True,
    target_compatible_with = _WINDOWS_INCOMPATIBLE,
    deps = [
        "@rules_python//python/cc:current_py_cc_headers_abi3",
        "@rules_python//python/cc:current_py_cc_libs",
    ],
)

py_library(
    name = "example_library",
    testonly = True,
    data = [":example_library.so"],
    imports = ["."],
    target_compatible_with = _WINDOWS_INCOMPATIBLE,
)

py_library(
    name = "limited_api_library",
    testonly = True,
    data = [":limited_api_library.so"],
    imports = ["."],
    target_compatible_with = _WINDOWS_INCOMPATIBLE,
)

py_test(
    name = "test_smoke",
    srcs = ["test_smoke.py"],
    python_version = "3.13",
    target_compatible_with = _WINDOWS_INCOMPATIBLE,
    deps = [":example_library"],
)

py_test(
    name = "test_limited_api",
    srcs = ["test_limited_api.py"],
    python_version = "3.13",
    target_compatible_with = _WINDOWS_INCOMPATIBLE,
    deps = [":limited_api_library"],
)
