load("//py:defs.bzl", "py_test", "py_venv")
load(
    "//py/tests/py-internal-venv:venv_entries_test.bzl",
    "explicit_venv_entries_test",
    "exposed_venv_entries_test",
    "private_venv_entries_test",
    "windows_exposed_venv_entries_test",
    "windows_private_venv_entries_test",
)

# Two variants of the same test: `test` uses `py_test` defaults
# (`isolated = True`); `test_non_isolated` flips `isolated = False`.
# Both should satisfy the structural assertions in test.py (they're
# basename-tolerant).

py_test(
    name = "test",
    srcs = [
        "test.py",
    ],
    imports = [
        ".",
    ],
    main = "test.py",
    deps = [
        "@pypi//cowsay",
    ],
)

py_test(
    name = "test_non_isolated",
    srcs = [
        "test.py",
    ],
    imports = [
        ".",
    ],
    isolated = False,
    main = "test.py",
    deps = [
        "@pypi//cowsay",
    ],
)

py_test(
    name = "_exposed_test",
    srcs = ["test.py"],
    expose_venv = True,
    imports = ["."],
    main = "test.py",
    tags = ["manual"],
    deps = ["@pypi//cowsay"],
)

py_venv(
    name = "_explicit_venv",
    tags = ["manual"],
    deps = ["@pypi//cowsay"],
)

platform(
    name = "_windows_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

private_venv_entries_test(
    name = "private_venv_entries_test",
    target_under_test = ":_test.venv",
)

exposed_venv_entries_test(
    name = "exposed_venv_entries_test",
    target_under_test = ":_exposed_test.venv",
)

explicit_venv_entries_test(
    name = "explicit_venv_entries_test",
    target_under_test = ":_explicit_venv",
)

windows_private_venv_entries_test(
    name = "windows_private_venv_entries_test",
    target_under_test = ":_test.venv",
)

windows_exposed_venv_entries_test(
    name = "windows_exposed_venv_entries_test",
    target_under_test = ":_exposed_test.venv",
)
