load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//py:defs.bzl", "py_library", "py_test")
load(":rule.bzl", "pep517_native_whl", "pep517_whl")
load(
    ":test.bzl",
    "build_memory_failure_test",
    "build_memory_test",
    "built_wheel_metadata_absent_test",
    "built_wheel_metadata_failure_test",
    "built_wheel_metadata_test",
    "compiler_selection_toolchain",
    "hostile_python_env_target",
    "pep517_native_whl_compiler_selection_test",
    "pep517_native_whl_disabled_cxx_test",
    "pep517_native_whl_missing_cxx_test",
    "pep517_native_whl_same_driver_clang_test",
    "pep517_native_whl_same_driver_gcc_test",
    "pep517_native_whl_toolchain_env_test",
)

package(default_visibility = [
    "//uv/private:__subpackages__",
])

exports_files(
    ["build_helper.py"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "rule",
    srcs = ["rule.bzl"],
    deps = [
        ":build_memory",
        ":providers",
        "//py/private/toolchain:types",
        "@bazel_lib//lib:resource_sets",
        "@rules_cc//cc:action_names_bzl",
    ],
)

py_library(
    name = "memory_monitor",
    srcs = ["memory_monitor.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "memory_monitor_test",
    srcs = ["memory_monitor_test.py"],
    main = "memory_monitor_test.py",
    deps = [":memory_monitor"],
)

py_test(
    name = "build_helper_native_tools_test",
    srcs = ["build_helper_native_tools_test.py"],
    data = [
        ":build_helper.py",
        ":memory_monitor",
    ],
    deps = [
        "@pypi//build",
        "@pypi//setuptools",
    ],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    visibility = ["//uv:__subpackages__"],
    deps = [
        ":providers",
        ":rule",
        "@bazel_skylib//lib:unittest",
        "@rules_cc//cc:bzl_srcs",
    ],
)

# --- Analysis test fixtures ----------------------------------------------
#
# pep517_native_whl only needs its attrs to type-check at analysis time;
# the action is never executed. A stub sdist input and a no-op shell tool
# are enough to materialise the action so we can introspect its env dict.

write_file(
    name = "__stub_sdist",
    out = "__stub_sdist.tar.gz",
    content = [""],
    tags = ["manual"],
)

write_file(
    name = "__stub_tool_sh",
    out = "__stub_tool.sh",
    content = [
        "#!/bin/sh",
        "exit 0",
    ],
    is_executable = True,
    tags = ["manual"],
)

sh_binary(
    name = "__stub_tool",
    srcs = [":__stub_tool_sh"],
    tags = ["manual"],
)

pep517_whl(
    name = "__excessive_memory_fixture",
    src = ":__stub_sdist",
    build_memory_mb = 32769,
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "0.0.1",
)

build_memory_failure_test(
    name = "build_memory_limit_test",
    expected_error = "build_memory_mb must be between 0 and 32768",
    target_under_test = ":__excessive_memory_fixture",
)

pep517_whl(
    name = "__maximum_memory_fixture",
    src = ":__stub_sdist",
    build_memory_mb = 32768,
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "0.0.1",
)

build_memory_test(
    name = "build_memory_maximum_test",
    target_under_test = ":__maximum_memory_fixture",
)

sh_binary(
    name = "__python_env_tool",
    srcs = ["python_env_test.sh"],
    tags = ["manual"],
)

pep517_whl(
    name = "__built_wheel_metadata_fixture",
    src = ":__stub_sdist",
    args = ["absent"],
    built_wheel_console_scripts = ["demo=demo.cli:main"],
    built_wheel_directory_top_levels = [
        "demo",
        "demo-1.0.0.dist-info",
    ],
    built_wheel_top_levels = [
        "demo",
        "demo-1.0.0.dist-info",
    ],
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "1.0.0",
)

built_wheel_metadata_test(
    name = "built_wheel_metadata_test",
    expected_console_scripts = ["demo=demo.cli:main"],
    expected_directory_top_levels = [
        "demo",
        "demo-1.0.0.dist-info",
    ],
    expected_top_levels = [
        "demo",
        "demo-1.0.0.dist-info",
    ],
    target_under_test = ":__built_wheel_metadata_fixture",
)

pep517_whl(
    name = "__invalid_built_wheel_directory_fixture",
    src = ":__stub_sdist",
    args = ["absent"],
    built_wheel_directory_top_levels = ["other"],
    built_wheel_top_levels = ["demo"],
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "1.0.0",
)

built_wheel_metadata_failure_test(
    name = "invalid_built_wheel_directory_test",
    expected_error = "built_wheel_directory_top_levels entries are absent from built_wheel_top_levels",
    target_under_test = ":__invalid_built_wheel_directory_fixture",
)

pep517_whl(
    name = "__console_script_only_metadata_fixture",
    src = ":__stub_sdist",
    args = ["absent"],
    built_wheel_console_scripts = ["demo=demo.cli:main"],
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "1.0.0",
)

built_wheel_metadata_test(
    name = "console_script_only_metadata_test",
    expected_console_scripts = ["demo=demo.cli:main"],
    target_under_test = ":__console_script_only_metadata_fixture",
)

pep517_whl(
    name = "__top_level_only_metadata_fixture",
    src = ":__stub_sdist",
    args = ["absent"],
    built_wheel_directory_top_levels = ["demo"],
    built_wheel_top_levels = ["demo"],
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "1.0.0",
)

built_wheel_metadata_test(
    name = "top_level_only_metadata_test",
    expected_directory_top_levels = ["demo"],
    expected_top_levels = ["demo"],
    target_under_test = ":__top_level_only_metadata_fixture",
)

pep517_whl(
    name = "__empty_built_wheel_metadata_fixture",
    src = ":__stub_sdist",
    args = ["absent"],
    built_wheel_metadata_known = True,
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "1.0.0",
)

built_wheel_metadata_test(
    name = "empty_built_wheel_metadata_test",
    target_under_test = ":__empty_built_wheel_metadata_fixture",
)

pep517_whl(
    name = "__unknown_built_wheel_metadata_fixture",
    src = ":__stub_sdist",
    args = ["absent"],
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "1.0.0",
)

built_wheel_metadata_absent_test(
    name = "unknown_built_wheel_metadata_test",
    target_under_test = ":__unknown_built_wheel_metadata_fixture",
)

pep517_whl(
    name = "__ambient_env_fixture",
    src = ":__stub_sdist",
    args = ["absent"],
    tags = ["manual"],
    tool = ":__python_env_tool",
    version = "0.0.1",
)

hostile_python_env_target(
    name = "__ambient_env_under_hostile_config",
    tags = ["manual"],
    target = ":__ambient_env_fixture",
)

build_test(
    name = "python_env_test",
    targets = [
        ":__ambient_env_under_hostile_config",
        "//uv/private/pep517_whl/explicit_env:under_hostile_config",
    ],
    visibility = ["//visibility:public"],
)

# Replicate the extra toolchain and package env emitted by sdist_build's BUILD
# template (see uv/private/sdist_build/repository.bzl). Compiler, archiver,
# and strip defaults come from the selected CcToolchainInfo.
pep517_native_whl(
    name = "__toolchain_env_fixture",
    src = ":__stub_sdist",
    built_wheel_console_scripts = ["native-demo=native_demo:main"],
    built_wheel_directory_top_levels = ["native_demo"],
    built_wheel_top_levels = ["native_demo"],
    env = {
        "JAVA_HOME": "$(JAVABASE)",
        "JAVA": "$(JAVA)",
        "JAR": "$(JAVABASE)/bin/jar",
    },
    tags = ["manual"],
    tool = ":__stub_tool",
    toolchains = [
        "@bazel_tools//tools/cpp:current_cc_toolchain",
        "@bazel_tools//tools/jdk:current_java_runtime",
    ],
    version = "0.0.1",
)

pep517_native_whl_toolchain_env_test(
    name = "toolchain_env_test",
    check_toolchain_env = True,
    target_under_test = ":__toolchain_env_fixture",
)

built_wheel_metadata_test(
    name = "native_built_wheel_metadata_test",
    expected_console_scripts = ["native-demo=native_demo:main"],
    expected_directory_top_levels = ["native_demo"],
    expected_top_levels = ["native_demo"],
    target_under_test = ":__toolchain_env_fixture",
)

compiler_selection_toolchain(
    name = "__compiler_selection",
    ar_driver = "ar_driver_test.sh",
    c_driver = "c_driver_test.sh",
    compiler = "gcc",
    compiler_actions = [
        "CC",
        "CXX",
    ],
    cxx_driver = "cxx_driver_test.sh",
    ld_driver = "ld_driver_test.sh",
    no_legacy_features = False,
    optional_tools = [
        "AR",
        "STRIP",
    ],
    strip_driver = "strip_driver_test.sh",
)

compiler_selection_toolchain(
    name = "__same_driver_clang",
    ar_driver = "ar_driver_test.sh",
    c_driver = "c_driver_test.sh",
    compiler = "clang",
    compiler_actions = [
        "CC",
        "CXX",
    ],
    cxx_driver = "c_driver_test.sh",
    ld_driver = "ld_driver_test.sh",
    no_legacy_features = False,
    optional_tools = [
        "AR",
        "STRIP",
    ],
    strip_driver = "strip_driver_test.sh",
)

compiler_selection_toolchain(
    name = "__same_driver_gcc",
    ar_driver = "ar_driver_test.sh",
    c_driver = "c_driver_test.sh",
    compiler = "gcc-12",
    compiler_actions = [
        "CC",
        "CXX",
    ],
    cxx_driver = "c_driver_test.sh",
    ld_driver = "ld_driver_test.sh",
    no_legacy_features = False,
    optional_tools = [],
    strip_driver = "strip_driver_test.sh",
)

compiler_selection_toolchain(
    name = "__missing_cxx",
    ar_driver = "ar_driver_test.sh",
    c_driver = "c_driver_test.sh",
    compiler = "gcc",
    compiler_actions = ["CC"],
    cxx_driver = "cxx_driver_test.sh",
    ld_driver = "ld_driver_test.sh",
    no_legacy_features = False,
    optional_tools = [],
    strip_driver = "strip_driver_test.sh",
)

compiler_selection_toolchain(
    name = "__disabled_cxx",
    ar_driver = "ar_driver_test.sh",
    c_driver = "c_driver_test.sh",
    compiler = "gcc",
    compiler_actions = ["CC"],
    cxx_driver = "cxx_driver_test.sh",
    ld_driver = "ld_driver_test.sh",
    no_legacy_features = True,
    optional_tools = [],
    strip_driver = "strip_driver_test.sh",
)

pep517_native_whl_compiler_selection_test(
    name = "compiler_selection_test",
    expected_tools = {
        "AR": "uv/private/pep517_whl/ar_driver_test.sh",
        "CC": "uv/private/pep517_whl/c_driver_test.sh",
        "CXX": "uv/private/pep517_whl/cxx_driver_test.sh",
        "STRIP": "uv/private/pep517_whl/strip_driver_test.sh",
    },
    target_under_test = ":__toolchain_env_fixture",
)

pep517_native_whl_same_driver_clang_test(
    name = "same_driver_clang_test",
    expected_cxx_args = ["--driver-mode=g++"],
    expected_tools = {
        "AR": "uv/private/pep517_whl/ar_driver_test.sh",
        "CC": "uv/private/pep517_whl/c_driver_test.sh",
        "CXX": "uv/private/pep517_whl/c_driver_test.sh",
        "STRIP": "uv/private/pep517_whl/strip_driver_test.sh",
    },
    target_under_test = ":__toolchain_env_fixture",
)

pep517_native_whl_same_driver_gcc_test(
    name = "same_driver_gcc_test",
    expected_tool_errors = {
        "CXX": "C++ toolchain 'gcc-12' uses 'uv/private/pep517_whl/c_driver_test.sh' for both CC and CXX; set an explicit CXX override",
    },
    expected_tools = {
        "CC": "uv/private/pep517_whl/c_driver_test.sh",
    },
    target_under_test = ":__toolchain_env_fixture",
)

pep517_native_whl_missing_cxx_test(
    name = "missing_cxx_test",
    expected_tool_errors = {
        "CXX": "C++ toolchain CXX tool is absent from all_files: uv/private/pep517_whl/DUMMY_GCC_TOOL",
    },
    expected_tools = {
        "CC": "uv/private/pep517_whl/c_driver_test.sh",
    },
    target_under_test = ":__toolchain_env_fixture",
)

pep517_native_whl_disabled_cxx_test(
    name = "disabled_cxx_test",
    expected_tool_errors = {
        "CXX": "C++ toolchain does not enable the c++-compile action required for CXX",
    },
    expected_tools = {
        "CC": "uv/private/pep517_whl/c_driver_test.sh",
    },
    target_under_test = ":__toolchain_env_fixture",
)

pep517_native_whl(
    name = "__missing_cxx_override_fixture",
    src = ":__stub_sdist",
    env = {"CXX": "explicit-c++"},
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "0.0.1",
)

pep517_native_whl_missing_cxx_test(
    name = "missing_cxx_override_test",
    expected_env = {"CXX": "explicit-c++"},
    expected_tools = {
        "CC": "uv/private/pep517_whl/c_driver_test.sh",
    },
    target_under_test = ":__missing_cxx_override_fixture",
)

pep517_native_whl(
    name = "__same_driver_gcc_override_fixture",
    src = ":__stub_sdist",
    env = {
        "AR": "explicit-ar --mode",
        "CXX": "explicit-c++",
        "LD": "explicit-ld --mode",
    },
    tags = ["manual"],
    tool = ":__stub_tool",
    version = "0.0.1",
)

pep517_native_whl_same_driver_gcc_test(
    name = "same_driver_gcc_override_test",
    expected_env = {
        "AR": "explicit-ar --mode",
        "CXX": "explicit-c++",
        "LD": "explicit-ld --mode",
    },
    expected_tools = {
        "CC": "uv/private/pep517_whl/c_driver_test.sh",
    },
    target_under_test = ":__same_driver_gcc_override_fixture",
)

bzl_library(
    name = "build_memory",
    srcs = ["build_memory.bzl"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)
